# verify

./: .gitignore  CMakeLists.txt  detector.h  fastest_test.cpp  fastestdet.cpp  fastestdet.h  nano_test.cpp  nanodet.cpp  nanodet.h  vision.cpp  vision.h
config/: fastestdet.json  nanodet-ELite1_416.json  nanodet-plus-m-1.5x_416-opt.json  nanodet-plus-m-1.5x_416.json  nanodet-plus-m-1.5x_416_int8.json  nanodet-plus-m-1.5x_416_multi_output.json  nanodet-plus-m-1.5x_416_new_infra.json  nanodet-plus-m_416-int8.json  nanodet-plus-m_416.json
lib/: Nanop.cpp  Nanop.h  nanodet.h  vision.cpp
main/: fastest_test.cpp  nano_test.cpp  nanop_intra.cpp  shape_test.cpp
models/: nanodet-ELite1_416.param  nanodet-plus-m-1.5x_416 (1).param  nanodet-plus-m-1.5x_416 (2).param  nanodet-plus-m-1.5x_416 (3).param  nanodet-plus-m-1.5x_416-opt.param  nanodet-plus-m-1.5x_416.param  nanodet-plus-m-1.5x_416_int8.param  nanodet-plus-m_416.param
